--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
    <!-- Resume Section -->
 <article class="resume" data-page="resume">
 <header style="text-align: center; margin: 40px 0;">
-  <a href="\Lingabarani_Portfolio\Lingabarani_Resume.pdf" 
+  <a href="Lingabarani_Resume.pdf" 
      class="download-link" 
      download
      style="
