Fix source code in index.html
Corrected the source code in the blog post item.

--- a/index.html
+++ b/index.html
@@ -1099,7 +1099,7 @@ Completed a 25-hour Udemy course on “Numpy for Data Science – Real Time Expe
               <a href="https://www.linkedin.com/feed/update/urn:li:activity:7381994917092532224/?originTrackingId=kwGH5EkuYCOyytyWdONcQw%3D%3D">
 
                 <figure class="blog-banner-box">
-                  <img src=".assets/images/LINGABARANI M G - Participation Certificate_page-0001.jpg" alt="Design digest #79" loading="lazy">
+                  <img src="./assets/images/LINGABARANI M G - Participation Certificate_page-0001.jpgjpg" alt="Design digest #79" loading="lazy">
                 </figure>
 
                 <div class="blog-content">
