--- a/index.html
+++ b/index.html
@@ -847,7 +847,7 @@ Elevate Labs enabled hands-on learning, real problem solving, and daily growth t
              <li class="blog-post-item">
               <a href="https://www.linkedin.com/posts/lingabarani_learning-industrialvisit-professionalgrowth-activity-7233859261888413696-DTMt?utm_source=share&utm_medium=member_desktop&rcm=ACoAAEIi0XkBC3RK3P5_wI8c4oIaAahO1XE7Wq8">
                 <figure class="blog-banner-box">
-                  <img src="./assets/images/evoastra intern.png>
+                  <img src="./assets/images/evoastra intern.png" alt="Design conferences in 2022" loading="lazy">
                 </figure>
                 <div class="blog-content">
                   <div class="blog-meta">
