Revise about section for clarity and brevity
Updated personal introduction and experience details to be more concise and focused.

--- a/index.html
+++ b/index.html
@@ -161,14 +161,10 @@
 
         <section class="about-text" style="display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: justify; width: 100%;">
           <div style="max-width: 800px;">
-            <p>
-              Hello! My name is Lingabarani M G, and I am a Data Analyst. I have a passion for transforming data into
-              actionable insights and creating meaningful visualizations. With a strong foundation in statistics and data
-              analysis, I enjoy uncovering patterns and trends that drive informed decision-making.
-            </p>
-            <p>
-              Over the past few months, I completed a 3-month Data Analytics certification course, where I gained hands-on experience with Python (pandas, NumPy, matplotlib), SQL, Power BI, MS Excel, and Google Colab. I worked on key projects like a Multiple Disease Prediction system (diabetes, heart disease, Parkinson’s) using Streamlit, and a Liver Disease Prediction model, which I presented at a national conference at KPR Engineering College. I also created dashboards using Power BI and SQL, and built a web-based Online Examination Portal using HTML, CSS, and MySQL. I enjoy turning data into useful insights to support better decisions. I’m always eager to learn more and contribute to a team where I can grow and make an impact.
-            </p>
+            <p>Hello, I’m Lingabarani M G, a Data Analyst who enjoys turning data into clear insights and practical solutions. I like working hands-on with data—cleaning it, analyzing patterns, and presenting results in a way that helps people make better decisions.</p>
+            <p>I have completed multiple certifications and internships that strengthened my skills in Python, SQL, Power BI, Excel, Machine Learning, and Data Analytics. I successfully completed a Diploma in Data Analytics (Professional) and industry simulations from Tata (Forage), Deloitte, JPMorgan Chase, and One Roadmap, where I worked on real-world tasks like data analysis, risk profiling, AI-driven insights, and business reporting.</p>
+            <p>I also completed an AI/ML internship, where I worked on data-driven models, explored machine learning techniques, and applied analytical thinking to practical problems. My academic and certification projects include a Multiple Disease Prediction System, a Liver Disease Prediction model presented at a national conference, and interactive dashboards built using Power BI and SQL.</p>
+            <p>I’m a continuous learner who enjoys applying theory to real projects. I’m looking to grow as a data professional while contributing meaningful, data-backed solutions to a dynamic team.</p>
           </div>
         </section>
 
