Revise internship experiences in index.html
Updated internship details and added new roles in the timeline section.

--- a/index.html
+++ b/index.html
@@ -96,22 +96,14 @@
               <ion-icon name="logo-github"></ion-icon>
             </a>
           </li>
-
           <li class="social-item">
             <a href="#" class="social-link">
               <ion-icon name="briefcase-outline"></ion-icon>
             </a>
           </li>
-
         </ul>
-
       </div>
-
     </aside>
-
-
-
-
 
     <!--
       - #main-content
@@ -476,27 +468,47 @@
       <div class="icon-box">
         <ion-icon name="briefcase-outline"></ion-icon>
       </div>
-      <h3 class="h3">Internship and Inplant Training</h3>
+      <h3 class="h3">Internship</h3>
     </div>
 
-    <ol class="timeline-list">
-      <li class="timeline-item">
-        <h4 class="h4 timeline-item-title">Data Analytics Trainee</h4>
-        <span>2024 — 2025</span>
-        <p class="timeline-text">
-          Completed real-time projects using Excel, Python (pandas, NumPy), Power BI and SQL. Created dashboards and forecasts.
-        </p>
-      </li>
+<ol class="timeline-list">
 
-      <li class="timeline-item">
-        <h4 class="h4 timeline-item-title">Web Development Inplant Training - The Website Makers</h4>
-        <span>2023</span>
-        <p class="timeline-text">
-          Built a web portal for online examinations using HTML, CSS, and SQL with focus on backend handling and user interface.
-        </p>
-      </li>
-    </ol>
-  </section>
+  <!-- Data Analytics Trainee -->
+  <li class="timeline-item">
+    <h4 class="h4 timeline-item-title">Data Analytics Trainee</h4>
+    <span>Oct 2024 — Dec 2024</span>
+    <p class="timeline-text">
+      Completed real-time projects using Excel, Python (Pandas, NumPy), Power BI, and SQL.
+      Designed interactive dashboards, performed data cleaning, and built forecasting models.
+    </p>
+  </li>
+
+  <!-- Data Analyst Intern -->
+  <li class="timeline-item">
+    <h4 class="h4 timeline-item-title">Data Analyst Intern – Elevate Labs</h4>
+    <span>Jul 2025 — Dec 2025</span>
+    <p class="timeline-text">
+      Built CRUD-based analytics dashboards using SQL, Python, and Power BI on 1,000+ records.
+      Automated data cleaning and reporting processes, reducing manual effort by 30%.
+    </p>
+  </li>
+
+  <!-- AI/ML Intern -->
+  <li class="timeline-item">
+    <h4 class="h4 timeline-item-title">AI / ML Intern – Evoastra Ventures</h4>
+    <span>Oct 2025 — Jan 2026</span>
+    <p class="timeline-text">
+      Trained and evaluated machine learning models in Python with accuracy up to 92%.
+      Worked on data preprocessing, feature engineering, and model performance evaluation.
+    </p>
+  </li>
+
+</ol>
+
+
+ 
+
+  
 
   <!-- Skills -->
   <section class="skill">
