Revise internship entries in index.html
Updated internship descriptions for clarity and detail.

--- a/index.html
+++ b/index.html
@@ -470,10 +470,10 @@
       </div>
       <h3 class="h3">Internship</h3>
     </div>
-
 <ol class="timeline-list">
 
   <!-- Data Analytics Trainee -->
+
   <li class="timeline-item">
     <h4 class="h4 timeline-item-title">Data Analytics Trainee</h4>
     <span>Oct 2024 — Dec 2024</span>
@@ -483,27 +483,26 @@
     </p>
   </li>
 
-  <!-- Data Analyst Intern -->
   <li class="timeline-item">
     <h4 class="h4 timeline-item-title">Data Analyst Intern – Elevate Labs</h4>
     <span>Jul 2025 — Dec 2025</span>
     <p class="timeline-text">
-      Built CRUD-based analytics dashboards using SQL, Python, and Power BI on 1,000+ records.
-      Automated data cleaning and reporting processes, reducing manual effort by 30%.
+      Worked on real-world datasets using SQL, Python, and Power BI.
+      Built analytics dashboards, automated data cleaning, and generated reports to improve insights.
     </p>
   </li>
 
-  <!-- AI/ML Intern -->
   <li class="timeline-item">
     <h4 class="h4 timeline-item-title">AI / ML Intern – Evoastra Ventures</h4>
     <span>Oct 2025 — Jan 2026</span>
     <p class="timeline-text">
-      Trained and evaluated machine learning models in Python with accuracy up to 92%.
-      Worked on data preprocessing, feature engineering, and model performance evaluation.
+      Developed and evaluated machine learning models using Python.
+      Performed data preprocessing, feature engineering, and model evaluation for better accuracy.
     </p>
   </li>
 
 </ol>
+
 
 
  
