Update email and phone links in index.html

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
             <div class="contact-info">
               <p class="contact-title">Email</p>
-              <a href="lingabaraniak@gmail.com" class="contact-link">lingabaraniak@gmail.com</a>
+              <a href="mailto:lingabaraniak@gmail.com" class="contact-link">
             </div>
           </li>
           <li class="contact-item">
@@ -61,7 +61,7 @@
             </div>
             <div class="contact-info">
               <p class="contact-title">Phone</p>
-              <a href="tel:+12133522795" class="contact-link">+91 6380854727</a>
+              <a href="tel:+916380854727" class="contact-link">
             </div>
           </li>
           <li class="contact-item">
