--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lingabarani_DataAnalyst</title>
+  <title>Lingabarani M G | Data Analyst Portfolio</title>
 
   <!--
     - favicon
@@ -52,7 +52,7 @@
             </div>
             <div class="contact-info">
               <p class="contact-title">Email</p>
-              <a href="mailto:lingabaraniak@gmail.com" class="contact-link">
+              <a href="mailto:lingabaraniak@gmail.com" class="lingabaraniak@gmail.com">
             </div>
           </li>
           <li class="contact-item">
@@ -61,7 +61,7 @@
             </div>
             <div class="contact-info">
               <p class="contact-title">Phone</p>
-              <a href="tel:+916380854727" class="contact-link">
+              <a href="tel:+916380854727" class="+916380854727">
             </div>
           </li>
           <li class="contact-item">
