Update contact links for email and phone

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
             <div class="contact-info">
               <p class="contact-title">Email</p>
-              <a href="mailto:lingabaraniak@gmail.com" class="lingabaraniak@gmail.com">
+             <a href="mailto:lingabaraniak@gmail.com" class="contact-link">lingabaraniak@gmail.com</a>
             </div>
           </li>
           <li class="contact-item">
@@ -61,7 +61,7 @@
             </div>
             <div class="contact-info">
               <p class="contact-title">Phone</p>
-              <a href="tel:+916380854727" class="+916380854727">
+              <a href="tel:+916380854727" class="contact-link">+916380854727</a>
             </div>
           </li>
           <li class="contact-item">
