--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
             <div class="contact-info">
               <p class="contact-title">Phone</p>
-              <a href="tel:+916380854727" class="contact-link">+916380854727</a>
+              <a href="tel:+916380854727" class="contact-link">+91 6380854727</a>
             </div>
           </li>
           <li class="contact-item">
